# C-Programming-Project

./: CMakeLists.txt  README.md  test.sh
app/: CMakeLists.txt
app/include/: main.h  potenze.h  potenze_giorno.h  potenze_tot.h
app/src/: main.c  potenze_giorno.c  potenze_parco_eolico.c  potenze_tot.c
data/: .~lock.power_coefficient_curves.csv#  .~lock.power_curves.csv#  .~lock.turbine_data.csv#  .~lock.weather.csv#  prova_weather.csv  turbine_data.csv
include/: main.h
lib/: CMakeLists.txt
lib/calcolo_output/: CMakeLists.txt
lib/calcolo_output/include/: calcolo_output.h
lib/calcolo_output/src/: calcolo_output.c
lib/csv_reader/: CMakeLists.txt
lib/estrazione_csv/: CMakeLists.txt
lib/estrazione_csv/include/: estrattore_csv.h
lib/estrazione_csv/src/: estrattore_csv.c  estrattore_csv_power_coefficient.c  estrattore_csv_power_curves.c  estrattore_csv_turbine.c  estrattore_csv_weather.c
lib/formule/: CMakeList.txt  CMakeLists.txt
lib/formule/include/: formule.h
lib/formule/src/: formule.c
lib/lettore_csv/: CMakeLists.txt
lib/lettore_csv/libestrazione_csv/include/: estrattore_csv.h
lib/lettore_csv/libestrazione_csv/src/: estrattore_csv.c
lib/parametri/: CMakeLists.txt
lib/parametri/include/: parametri.h
lib/parametri/src/: parametri.c
lib/plot/: CMakeLists.txt
lib/plot/include/: plot.h
lib/plot/src/: plot.c
src/: main.c
test/: CMakeLists.txt
test/test_calcolo_output/: CMakeLists.txt  test_calcolo_output.c
test/test_csv/: CMakeLists.txt
test/test_csv/files/: file1.csv  file2.csv  file3.csv  file4.csv
test/test_csv/src/: test2.c  test_csv.c
test/test_estrazione/: CMakeLists.txt  test_estrazione.c  test_estrazione_curve.c  test_estrazione_power_coefficient_curves.c  test_estrazione_turbine.c  test_estrazione_weather.c
test/test_estrazione/files/: prova_potenza1.csv  prova_weather1.csv  prova_weather2.csv
test/test_formule/: CMakeList.txt  CMakeLists.txt  test_formule.c
test/test_parametri/: CMakeLists.txt  test_parametri.c
test/test_plot/: CMakeLists.txt  test_plot.c
test_estrazione/: CMakeLists.txt  test_estrazione.c
